--- a/test.html
+++ b/test.html
@@ -69,6 +69,7 @@
         <div class="cost">
             <p class="Preco">R$20,50</p>
             <span class="material-symbols-outlined">add_shopping_cart</span>
+            coisa aleatoria pra teste
         </div>
         
     </div>
