alteração de publicação

--- a/test.html
+++ b/test.html
@@ -25,12 +25,13 @@
 
     .card {
         background: green;
-        width: 270px;
+        width: fit-content;
         text-align: center;
         border-radius: 15px;
         overflow: hidden;
         padding-bottom: 15px;
         box-shadow: 0px 7px 5px darkgreen;
+
     }
     .card p {
         margin-top: 20px;
@@ -69,7 +70,6 @@
         <div class="cost">
             <p class="Preco">R$20,50</p>
             <span class="material-symbols-outlined">add_shopping_cart</span>
-            coisa aleatoria pra teste
         </div>
         
     </div>
